# wscad-registry

./: analysis.ipynb  pyproject.toml  run_experiments.py  setup.ipynb  usage_data.csv
datasets/: __main__.py  central_minimal.json  central_recommended.json  community_minimal.json  community_recommended.json  p2p_minimal.json  p2p_recommended.json
datasets/inputs/: base_minimal.json  base_recommended.json
