[tool.poetry]
name = "p2p-enhanced-registry-provisioning"
version = "0.1.0"
description = "P2P-enhanced registry provisioning on edge computing infrastructures"
authors = ["Lucas Roges <lucasrogesaraujo@gmail.com>"]
readme = "README.md"
packages = [{include = "simulation/strategies"}]

[tool.poetry.dependencies]
python = "^3.10"
edge-sim-py = {git = "https://github.com/tiagoferreto/EdgeSimPy.git"}
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
ipykernel = "^5.5"
networkx = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"